# representational-corruption-recovery

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: domains.yaml  experiment.yaml  leakage_blocklist.yaml  micro.yaml  smoke.yaml
data/eval/: source_items.jsonl  target_items.jsonl
docs/: SPEC.md
reports/: REPORT.md  datagen_sample.md  preregistration.md  related_work.md
scripts/: build_data.py  freeze_eval_items.py  gpu_sanity.py  make_figures.py  manipulation_check.py  run_coherence.py  run_eval.py  run_interp.py  sample_for_review.py  smoke.py  train_matrix.py
src/rcr/: config.py
src/rcr/datagen/: build.py  generator.py  safety_scan.py  schema.py  templates.py  transforms.py  validators.py
src/rcr/eval/: battery.py  capability.py  coherence.py  generate.py  judge.py  manipulation.py  reasoning_minibattery.py  scoring.py
src/rcr/interp/: activations.py  directions.py  llc.py  localization.py  logit_lens.py  lora_analysis.py  model_diff.py  patching.py  persistence.py  projections.py
src/rcr/stats/: analysis.py  figures.py  recovery.py
src/rcr/train/: dataset.py  two_phase.py
src/rcr/utils/: io.py  paths.py  provenance.py  seeding.py
tests/: conftest.py  test_config.py  test_figures.py  test_interp_pure.py  test_stats.py  test_transforms.py  test_validators.py
