[project]
name = "representational-corruption-recovery"
version = "0.1.0"
description = "Representational Corruption & Recovery (RCR): measuring which kinds of benign structural fine-tuning corruption leave a persistent, localizable, generalizing representational residue."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # --- core numerics / config ---
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "tqdm>=4.66",
    # --- deep learning stack (torch pinned to cu128 for sm_120 / RTX 5090) ---
    "torch>=2.7",
    "transformers>=4.49",
    "accelerate>=1.4",
    "peft>=0.14",
    "trl>=0.15",
    "datasets>=3.2",
    "safetensors>=0.4",
    # --- data generation / scoring ---
    "openai>=1.60",          # OpenAI-compatible client for local vLLM/ollama endpoint
    "httpx>=0.27",
    "sentence-transformers>=3.4",  # embedding audit for leakage controls
    "datasketch>=1.6",       # MinHash near-dup detection
    # --- figures ---
    "matplotlib>=3.8",
]

[project.optional-dependencies]
interp = [
    "transformer-lens>=2.0",
]
stretch = [
    "devinterp>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rcr"]

# torch + friends from the cu128 index (sm_120 Blackwell support)
[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "gpu: requires a CUDA device",
    "slow: long-running (training / generation)",
    "net: requires the generation endpoint",
]
